deploy/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportiverse-ingress
  namespace: sportiverse-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sportiverse.webapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sportiverse-webapp-service
                port:
                  number: 80
    - host: sportiverse.webapi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sportiverse-webapi-service
                port:
                  number: 5000
